--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-DATABASE_URL="database_url"
+DATABASE_URL="postgresql://<user>:<password>@<host>:<port>/<database>?pgbouncer=true"
+DIRECT_URL="postgresql://<user>:<password>@<host>:<port>/<database>"
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
+BETTER_AUTH_URL=your_better_auth_url
+
+BETTER_AUTH_SECRET=your_better_auth_secret
